[package]
name = "deathfloor"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
readme = "./README.md"
license = "MIT"

[dependencies]
derive_builder = "0.9.0"
ron = "0.5.1"
serde_json = "1.0.44"
specs-derive = "0.4.0"

[dependencies.deathframe]
version = "*"
path = "../deathframe"
# git = "https://github.com/Noah2610/deathframe"
# branch = "develop"
features = [
    "vulkan",
    "serde",
    "physics",
    "animation",
]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.climer]
version = "0.6.0"
default-features = false

[features]
default = []
debug = ["deathframe/debug"]
nightly = ["deathframe/nightly"]
