cargo-features = ["named-profiles"]

[package]
name = "deathfloor"
version = "0.0.4"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
readme = "./README.md"
license = "MIT"

[dependencies]
derive_builder = "0.9.0"
rand = "0.7.3"
serde_json = "1.0.44"
specs-derive = "0.4.0"

[dependencies.deathframe]
version = "*"
git = "https://github.com/Noah2610/deathframe"
branch = "debug/feature-texture-scaling"
features = [
    "physics",
    "animation",
    "audio",
]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.ron]
version = "0.6.0"
git = "https://github.com/Noah2610/ron"
branch = "v0.6.0-untagged-enums"

[dependencies.climer]
version = "0.6.0"
default-features = false

[features]
default = ["vulkan"]
vulkan  = ["deathframe/vulkan"]
metal   = ["deathframe/metal"]
debug   = ["deathframe/debug"]
dev     = []

[profile.dev]
opt-level        = 2
debug            = true
debug-assertions = true
codegen-units    = 1
incremental      = true
overflow-checks  = true

[profile.dev-performance]
inherits      = "dev"
codegen-units = 256

[profile.release]
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 256
incremental      = true
overflow-checks  = false
